Atualização API GET e POST

--- a/GD.UI/Views/Customer/Customer.cshtml
+++ b/GD.UI/Views/Customer/Customer.cshtml
@@ -1,7 +1,8 @@
-﻿
-@{
+﻿@{
     ViewData["Title"] = "Customer";
 }
 
 <h1>Customer</h1>
 
+<input type="submit" id="ConnectAPI" onclick="ConnectToAPI()" value="Inject" class="btn btn-dark btn-sm" />
+<input type="text" id ="txtName" onclick="Inserir()"/>
