--- a/GD.UI/Views/Shared/_Layout.cshtml
+++ b/GD.UI/Views/Shared/_Layout.cshtml
@@ -31,9 +31,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Customer" asp-action="Customer">Home</a>
                         </li>
-                        @*<li class="nav-item">
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>*@
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -70,7 +70,7 @@
                 integrity="sha384-xrRywqdh3PHs8keKZN+8zzc5TX0GRTLCcmivcbNJWm2rs5C8PRhcEn3czEjhAO9o">
         </script>
     </environment>
-    <script src="~/js/site.js" asp-append-version="true"></script>
+    <script src="~/js/Customer.js" asp-append-version="true"></script>
 
     @RenderSection("Scripts", required: false)
 </body>
